@@ -1,6 +1,10 @@
 compare		-1 -1 0 1 1
 nans		0 2 2 1 2
 trunc		-2 -2 0 2 2
+trunc		-3 -2 0 2 3
 ceil		-2 -2 0 3 3
+ceil		-3 -2 0 2 3
 floor		-3 -3 0 2 2
+floor		-3 -2 0 2 3
+round		-3 -2 0 2 3
 round		-3 -2 0 2 3
